# vajra

./: .gitignore  .prettierignore  AGENT_MANDATES.md  ARCHITECTURE.md  Anchor.toml  BOUNTY_TRACKS.md  DEMO.md  DEPLOYMENT.md  MCP.md  MERCHANT_VERIFICATION.md  PROOF_MODEL.md  README.md  RECEIPTS.md  RED_TEAM_SANDBOX.md  SDK.md  SECURITY_MODEL.md  STABLECOIN_AGENT_MANDATE.md  SUBMISSION_NOTES.md  X402_INTEGRATION.md  demo-state.example.json  package-lock.json  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: devnet-deployment.md  frontend-handoff.md  proof-model.md  solana-new-integration.md
mandates/: api-buyer-mandate.json  dao-ops-mandate.json  defi-bot-mandate.json  market-maker-mandate.json  payroll-ops-mandate.json  stablecoin-agent-mandate.json
programs/vajra/: Cargo.toml
programs/vajra/src/: errors.rs  events.rs  lib.rs  state.rs
programs/vajra/src/instructions/: add_destination.rs  create_policy.rs  execute_guarded_transfer.rs  fund_vault.rs  mod.rs  revoke_policy.rs  update_policy.rs  withdraw_funds.rs
programs/vajra/tests/: vajra_tests.rs
proofs/: audit.example.csv  blocked-drain.example.md  demo-proof.example.json  devnet-audit.csv  devnet-blocked-verification.json  devnet-deployment.json  devnet-incident-report.md  devnet-proof.json  devnet-signatures.json  signatures.example.json
scripts/: agent-spend.ts  attack-demo.ts  check-deployer.ts  check-devnet-readiness.sh  check-devnet-readiness.ts  common.ts  deploy.sh  devnet-proof.ts  devnet-red-team.mjs  devnet-run-demo.ts  (+18 more)
(+94 files in other folders)
