[package]
name = "vajra"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vajra"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = { version = "3.0.2", features = ["bincode"] }
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-program-pack = "3.0.0"
solana-rent = "3.0.0"
solana-clock = "3.0.0"
solana-system-interface = "2.0.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
solana-program-option = "3.0.0"
solana-account = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
